feat: persisted mark as done state
